--- a/src/css/components/login.css
+++ b/src/css/components/login.css
@@ -15,6 +15,10 @@
   & .input--text {
     background-color: white;
   }
+
+  & form label:last-of-type {
+    margin-top: 1.5rem;
+  }
 }
 
 .registreer {
