--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,6 +3,7 @@
   --colorYellow: #ffe408;
   --colorGrey: #f8f8f4;
   --colorGreyDark: #c2c2c2;
+  --colorGreen: rgb(69, 173, 113);
   --colorGreyBorder: rgb(197, 197, 197);
   --spacerRegular: 1.25rem;
   --spacerBig: 1.9rem;
