--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -1,6 +1,24 @@
-.menu__wrapper {
+.menu__wrapper--desktop {
   display: flex;
   flex-direction: column-reverse;
+
+  @media (--only-medium-screen) {
+    display: none;
+  }
+}
+
+.menu__wrapper--mobile {
+  display: none;
+
+  & nav {
+    width: 100%;
+  }
+
+  @media (--only-medium-screen) {
+    height: 3.5rem;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu {
@@ -90,10 +108,18 @@
   &:hover::before {
     background-image: url(./../../assets/img/icons/search-hover.svg);
   }
+
+  @media (--only-medium-screen) {
+    padding-left: .8rem;
+  }
+
+  @media (--only-small-screen) {
+    display: none;
+  }
 }
 
-.icon__wrapper .menu__item--cart {
-  padding-left: .8rem;
+.menu__item--cart {
+  padding-left: 2rem;
 
   &::before {
     height: 1.6rem;
@@ -103,6 +129,10 @@
 
   &:hover::before {
     background-image: url(./../../assets/img/icons/cart-empty-hover.svg);
+  }
+
+  @media (--only-small-screen) {
+    padding-right: 1rem;
   }
 }
 
@@ -114,6 +144,54 @@
 
   &:hover::before {
     background-image: url(./../../assets/img/icons/cart-filled-hover.svg);
+  }
+}
+
+.menu__item--user {
+  padding: 0 1.5rem 0 1rem;
+
+  &::before {
+    height: 1.6rem;
+    width: 1.6rem;
+    background-image: url(./../../assets/img/icons/user.svg);
+  }
+
+  @media (--only-small-screen) {
+    display: none;
+  }
+}
+
+.menu__item--hamburger {
+  padding-left: 2rem;
+
+  &::before {
+    height: 1.6rem;
+    width: 1.6rem;
+    background-image: url(./../../assets/img/icons/menu.svg);
+  }
+}
+
+.menu__item--logo {
+  transform: translateX(-5.7rem);
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-repeat: no-repeat;
+    height: 3.5rem;
+    width: 10.5rem;
+    background-image: url(./../../assets/img/logo.svg);
+  }
+}
+
+.menu__items--right {
+  display: flex;
+}
+
+.menu__items--mobile {
+
+  & .menu__item--logo {
+    margin: 0 auto;
   }
 }
 
