Login pagina responsive gemaakt

--- a/src/css/components/login.css
+++ b/src/css/components/login.css
@@ -2,11 +2,20 @@
   display: grid;
   grid-template: 1fr / 2fr 1fr;
   grid-gap: calc(var(--spacerBig) * 2);
+
+  @media (--only-inbetween-screen) {
+    grid-gap: var(--spacerRegular);
+    grid-template-columns: 1fr;
+  }
 }
 
 .login {
   background-color: var(--colorGrey);
   padding: calc(var(--spacerRegular) * 2) 4rem;
+
+  @media (--only-small-screen) {
+    padding: var(--spacerBig);
+  }
 
   & .button {
     margin-top: var(--spacerBig);
@@ -26,6 +35,10 @@
 
   & .button {
     margin-top: var(--spacerBig);
+
+    @media (--only-inbetween-screen) {
+      margin: var(--spacerBig) auto 0;
+    }
   }
 
   & .guest {
@@ -36,5 +49,9 @@
     &:hover {
       color: var(--colorRed);
     }
+  }
+
+  @media (--only-inbetween-screen) {
+    text-align: center;
   }
 }
