--- a/src/css/components/cart.css
+++ b/src/css/components/cart.css
@@ -104,6 +104,32 @@
   letter-spacing: .1rem;
 }
 
+.oldprice {
+  color: black;
+  font-size: var(--fontSmall);
+  text-decoration: none;
+  position: relative;
+  margin-bottom: .2rem;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 100%;
+    border-top: .15rem solid rgba(0, 0, 0, .5);
+    height: .8rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: rotate(-10deg);
+  }
+
+  & + p {
+    font-size: 18px;
+    font-family: var(--fontTitle);
+    color: var(--colorRed);
+  }
+}
+
 .cart__navigate {
   display: flex;
   justify-content: space-between;
@@ -140,8 +166,7 @@
 .cart__item {
   display: grid;
   grid-template-columns: 12rem 3fr 1fr 1fr 3rem;
-  grid-template-areas:
-    'img name quantity price remove';
+  grid-template-areas: 'img name quantity price remove';
   grid-auto-flow: row;
   overflow: visible;
   margin-bottom: var(--spacerBig);
@@ -178,22 +203,17 @@
     justify-content: center;
     align-items: center;
     grid-area: name;
-
-    @media (--only-inbetween-screen) {
-      align-items: flex-start;
-    }
   }
 
   & .item__info--img {
     padding-right: 2rem;
     height: 7.5rem;
     grid-area: img;
-    /* width: 12rem; */
+    width: 12rem;
     object-fit: cover;
 
     @media (--only-inbetween-screen) {
       padding-right: 1rem;
-    /* height: auto; */
       width: 100%;
       height: 5rem;
     }
@@ -205,6 +225,12 @@
 
   & .item__info--item {
     align-items: flex-start;
+
+    @media (--only-inbetween-screen) {
+      align-items: flex-start;
+      flex-direction: row;
+      justify-content: start;
+    }
   }
 
   /* & .item__info--price {
@@ -228,6 +254,7 @@
     font-family: var(--fontTitle);
     font-size: 18px;
     grid-area: price;
+
     @media (--only-inbetween-screen) {
       margin-left: 1rem;
     }
@@ -265,6 +292,10 @@
     letter-spacing: .1rem;
     margin-bottom: 1.2rem;
     text-transform: uppercase;
+
+    @media (--only-inbetween-screen) {
+      margin-left: .5rem;
+    }
   }
 }
 
@@ -323,31 +354,5 @@
       background-image: url(../../assets/img/icons/refresh.svg);
       transform: translate(-1.5rem, .2rem);
     }
-  }
-}
-
-.oldprice {
-  color: black;
-  font-size: var(--fontSmall);
-  text-decoration: none;
-  position: relative;
-  margin-bottom: .2rem;
-
-  &::before {
-    content: '';
-    display: block;
-    width: 100%;
-    border-top: .15rem solid rgba(0, 0, 0, .5);
-    height: .8rem;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: rotate(-10deg);
-  }
-
-  & + p {
-    font-size: 18px;
-    font-family: var(--fontTitle);
-    color: var(--colorRed);
   }
 }
