--- a/src/css/components/cart.css
+++ b/src/css/components/cart.css
@@ -44,7 +44,7 @@
   min-height: 9rem;
   padding: calc(var(--spacerRegular) * 2) 0;
 
-  @media (--only-inbetween-screen) {
+  @media (--only-extrasmall-screen) {
     flex-direction: column;
   }
 
@@ -52,7 +52,7 @@
     margin-bottom: 0;
     padding-right: 1.5rem;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       margin-bottom: 1.5rem;
     }
   }
@@ -137,7 +137,7 @@
   padding-top: var(--spacerBig);
   border-top: .05rem solid var(--colorGreyBorder);
 
-  @media (--only-inbetween-screen) {
+  @media (--only-extrasmall-screen) {
     flex-direction: column-reverse;
   }
 
@@ -146,7 +146,7 @@
     display: flex;
     align-items: center;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       margin-bottom: 3rem;
     }
 
@@ -171,14 +171,14 @@
   overflow: visible;
   margin-bottom: var(--spacerBig);
 
-  @media (--only-inbetween-screen) {
+  @media (--only-extrasmall-screen) {
     grid-template-columns: 25% auto 1fr 2rem;
     grid-template-areas:
       'img name name remove'
       'img quantity price remove';
   }
 
-  @media (--only-small-screen) {
+  @media (--only-mobile-screen) {
     grid-template-columns: auto 1fr 3rem;
     grid-template-areas:
       'name name remove'
@@ -208,7 +208,7 @@
     grid-area: name;
     align-items: flex-start;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       align-items: flex-start;
       flex-direction: row;
       justify-content: start;
@@ -222,13 +222,13 @@
     width: 12rem;
     object-fit: cover;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       padding-right: 1rem;
       width: 100%;
       height: 5rem;
     }
 
-    @media (--only-small-screen) {
+    @media (--only-mobile-screen) {
       display: none;
     }
   }
@@ -246,7 +246,7 @@
     font-size: 18px;
     grid-area: price;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       margin-left: 1rem;
     }
   }
@@ -286,7 +286,7 @@
     margin-bottom: 1.2rem;
     text-transform: uppercase;
 
-    @media (--only-inbetween-screen) {
+    @media (--only-extrasmall-screen) {
       margin-left: .5rem;
     }
   }
