--- a/src/css/longread/base.css
+++ b/src/css/longread/base.css
@@ -3,10 +3,39 @@
   background-color: #0f0f0f;
   color: white;
   font-family: Yrsa, sans-serif;
+  overflow-x: hidden;
+  width: 100vw;
+
+  & p {
+    font-size: 1.2rem;
+    line-height: 1.75;
+
+    @media (--only-extrasmall-screen) {
+      font-size: 1rem;
+    }
+  }
+
 }
 
-.title--longread {
-  font-family: Essonnes;
-  font-weight: normal;
-  font-size: 4.4rem;
+.container--big {
+  max-width: 85rem;
+  margin: 0 auto;
+  padding: 0 14.25rem;
+}
+
+.container--small {
+  /* container op die manier opbouwen, zo blijft container full width en kunnen img nog
+  responsive gepositioneerd worden, maximum width is 60rem adhv padding */
+  padding: 0 calc((100vw - 60rem) / 2); /* 60 rem = container width + margin */
+  margin: 0 2rem;
+}
+
+.intro__button {
+  display: inline-block;
+  font-family: Montserrat, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.2;
+  color: white;
+  background-color: var(--colorLongread);
+  padding: .2rem 1rem;
 }
