--- a/src/css/longread/intro.css
+++ b/src/css/longread/intro.css
@@ -45,6 +45,14 @@
   }
 }
 
+.intro__humo {
+  text-transform: uppercase;
+  font-family: Montserrat;
+  text-align: left;
+  letter-spacing: 1px;
+  color: var(--colorLongread);
+}
+
 .intro__title {
   margin-bottom: 0;
   font-family: Essonnes, sans-serif;
@@ -60,6 +68,15 @@
   margin-bottom: 2.5rem;
   font-family: Montserrat, sans-serif;
   font-size: 1.9rem;
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-color: white;
+    width: 3rem;
+    height: 1px;
+    transform: translate(-4rem, 1rem);
+  }
 }
 
 .quote {
