--- a/src/css/longread/intro.css
+++ b/src/css/longread/intro.css
@@ -1,32 +1,8 @@
-
-.intro {
-  margin-top: 5rem;
-  text-align: right;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-
-  @media (--only-medium-screen) {
-    margin-top: 0;
-    text-align: center;
-  }
-
-  & img {
-    width: 100%;
-    max-width: 53rem;
-    padding-right: 5rem;
-
-    @media (--only-medium-screen) {
-      padding: .5rem;
-    }
-  }
-}
+/* LIJN */
 
 .line--intro {
-
   &::before {
+    filter: invert(10%) sepia(20%) saturate(1500%) hue-rotate(315deg) brightness(80%) contrast(100%);
     content: '';
     background-image: url(../../assets/img/longread/line_header.svg);
     background-repeat: no-repeat;
@@ -45,29 +21,64 @@
   }
 }
 
-.intro__humo {
-  text-transform: uppercase;
-  font-family: Montserrat;
-  text-align: left;
-  letter-spacing: 1px;
-  color: var(--colorLongread);
+/* INTRO LAYOUT */
+
+.intro {
+  margin-top: 5rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  @media (--only-medium-screen) {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  & .intro__img {
+    width: 100%;
+    max-width: 53rem;
+    padding-right: 5rem;
+
+    @media (--only-medium-screen) {
+      padding: .5rem;
+    }
+  }
+
+  & .intro__text {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+/* INTRO OPMAAK */
+
+.intro__logo {
+  margin-bottom: 1rem;
 }
 
 .intro__title {
   margin-bottom: 0;
-  font-family: Essonnes, sans-serif;
+  font-family: var(--fontTitleLongread);
   font-weight: normal;
   font-size: 4.4rem;
 
   @media (--only-medium-screen) {
-    font-size: 3rem;
+    font-size: 3.5rem;
+  }
+
+  @media (--only-extrasmall-screen) {
+    font-size: 2.5rem;
   }
 }
 
 .intro__author {
+  text-align: right;
   margin-bottom: 2.5rem;
-  font-family: Montserrat, sans-serif;
-  font-size: 1.9rem;
+  font-size: 1.8rem;
+  font-family: var(--fontSubtitleLongread);
 
   &::before {
     content: '';
@@ -75,23 +86,41 @@
     background-color: white;
     width: 3rem;
     height: 1px;
-    transform: translate(-4rem, 1rem);
+    transform: translate(-5rem, 1.5rem);
+  }
+
+  @media (--only-extrasmall-screen) {
+    font-size: 1.5rem;
   }
 }
 
-.quote {
-  margin: 1rem auto;
+.button--longread {
+  margin-left: auto;
+  margin-bottom: 5rem;
+
+  @media (--only-medium-screen) {
+    margin: 0 auto;
+  }
+}
+
+.catchphrase {
+  margin: 2rem auto 11rem;
   text-align: center;
-  font-size: 1.4rem;
-  font-family: Essonnes, sans-serif;
+  font-family: var(--fontTitleLongread);
   font-style: italic;
   width: 15.5rem;
   position: relative;
-  /* transform: translateY(-3rem); */
-  margin-bottom: 15rem;
+
+  & p {
+    font-size: 1.4rem;
+  }
 
   @media (--only-medium-screen) {
-    margin-top: 6rem;
+    margin-top: 5rem;
+  }
+
+  @media (--only-small-screen) {
+    margin-bottom: 8rem;
   }
 
   &::after {
@@ -105,54 +134,10 @@
     @media (--only-medium-screen) {
       top: 5.5rem;
     }
-  }
-}
-
-.summary {
-
-  & p {
-    margin-bottom: 2rem;
-  }
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(28rem, 1fr));
-  grid-template-areas: 'text img';
-
-  @media (--only-small-screen) {
-    grid-template: repeat(2, auto) / 1fr;
-    grid-template-areas:
-      'img'
-      'text';
-  }
-}
-
-.summary__history {
-  grid-area: text;
-}
-
-.summary__img {
-  grid-area: img;
-  height: 366px; /* ander is height 0, bij mobile en komt tekst erboven op */
-  margin-bottom: 2rem; /* nodig voor mobile */
-
-  &::before {
-    content: '';
-    position: absolute;
-    background-image: url(../../assets/img/longread/televisie_860x366.png);
-    background-repeat: no-repeat;
-    right: 0; /* helemaal rechts positioneren */
-
-    /* Image size */
-    background-size: auto 366px;
-
-    /* Canvas size */
-    width: 46vw; /* 50vw - maar met beetje margin links */
-    height: 100%;
 
     @media (--only-small-screen) {
-      width: calc(100vw - 2rem);
+      top: 7rem;
+      height: 4.5rem;
     }
   }
 }
