--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,7 +3,6 @@
   --colorYellow: #ffe408;
   --colorGrey: #f8f8f4;
   --colorGreyDark: #c2c2c2;
-  --colorLongread: #b42d2d;
   --colorGreen: rgb(69, 173, 113);
   --colorGreyBorder: rgb(197, 197, 197);
   --spacerRegular: 1.25rem;
@@ -16,7 +15,19 @@
   --fontBig: 1.5rem;
   --fontBody: 'News Gothic', sans-serif;
   --fontTitle: 'Swiss Condensed', sans-serif;
+
+  /* longread */
   --container: calc((100vw - 60rem) / 2);
+  --colorLongread: #b42d2d;
+  --fontTitleLongread: essonnes-headline, serif;
+  --fontSubtitleLongread: montserrat, sans-serif;
+  --fontBodyLongread: yrsa, serif;
+  --fontTitle: 'Swiss Condensed', sans-serif;
+  --fontRegularLongread: 1.15rem;
+
+  @media (--only-extrasmall-screen) {
+    --fontRegularLongread: 1rem;
+  }
 }
 
 @custom-media --only-medium-screen (width < 1120px);
