responsiveness van webshop verbeterd

--- a/src/css/components/shopitem.css
+++ b/src/css/components/shopitem.css
@@ -59,9 +59,21 @@
   }
 
   & .info__options {
-    display: flex;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
+    grid-gap: var(--spacerRegular);
     text-align: center;
     margin-top: 0;
+
+    & div {
+      /* padding: .8rem 1.2rem .6rem; */
+      border: 1px solid rgb(226, 226, 226);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   & .info__cart {
@@ -74,10 +86,11 @@
 }
 
 .option__label {
-  border: 1px solid rgb(226, 226, 226);
-  padding: .8rem 1.2rem .6rem;
-  margin-right: var(--spacerRegular);
-
+  /* padding: 3rem; */
+  /* min-width: 5rem; */
+  padding: .7rem 0;
+  display: block;
+  min-width: 6rem;
   &:hover {
     cursor: pointer;
   }
@@ -85,11 +98,11 @@
   & .price {
     font-size: var(--fontSmall);
     font-family: var(--fontTitle);
-    margin-left: .3rem;
+    /* margin-left: .3rem; */
   }
 }
 
-.option__input:checked + .option__label {
+.option__input:checked + div {
   background-color: var(--colorGrey);
   border: 1px solid rgb(117, 117, 117);
   font-weight: bold;
