--- a/src/css/longread/navbar.css
+++ b/src/css/longread/navbar.css
@@ -6,4 +6,8 @@
   position: fixed;
   justify-content: center;
   margin-left: 5rem;
+
+  @media (--only-medium-screen) {
+    display: none;
+  }
 }
