--- a/src/css/base.css
+++ b/src/css/base.css
@@ -11,11 +11,12 @@
 
 html {
   box-sizing: inherit;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
-  height: 100%;
+  min-height: 100vh;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
